--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav>
             <img class="imgnav" src="logo_canal_trasparente.png">
             <ul>
-               <li>Aulas de JavaScript</li>
-               <li>Contato</li>
+            <li></li>
+            <li></li>
             </ul>
         </nav> 
     </header>
@@ -36,7 +36,10 @@
                 <button class="btn"><a href="https://www.youtube.com/channel/UCFceh7_DVDC0DYkPaKW7ClA" target="_blank"> Yotube </a></button>
             </div>
             <div>
-                <button class="btn"><a href="#" target="_blank"> TikTok </a></button>
+                <button class="btn"><a href="https://www.tiktok.com/@ed.carlos.foto" target="_blank"> TikTok </a></button>
+            </div>
+            <div>
+                <button class="btn"><a href="https://github.com/EdCarlosNunes" target="_blank"> GitHub </a></button>
             </div>
         </section>
     </article>
