--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
         </section>
         <section class="botao">
             <div>
-                <button class="btn"><a href="https://www.youtube.com/channel/UCFceh7_DVDC0DYkPaKW7ClA" target="_blank"> Yotube </a></button>
+                <button class="btn1"><a href="https://www.youtube.com/channel/UCFceh7_DVDC0DYkPaKW7ClA" target="_blank"> Yotube
+                    </a></button>
             </div>
             <div>
-                <button class="btn"><a href="https://www.tiktok.com/@ed.carlos.foto" target="_blank"> TikTok </a></button>
+                <button class="btn2"><a href="https://www.tiktok.com/@ed.carlos.foto" target="_blank"> TikTok </a></button>
             </div>
             <div>
-                <button class="btn"><a href="https://github.com/EdCarlosNunes" target="_blank"> GitHub </a></button>
+                <button class="btn3"><a href="https://github.com/EdCarlosNunes" target="_blank"> GitHub </a></button>
             </div>
         </section>
     </article>
