--- a/index.html
+++ b/index.html
@@ -43,7 +43,22 @@
             <div>
                 <button class="btn3"><a href="https://github.com/EdCarlosNunes" target="_blank"> GitHub </a></button>
             </div>
-        </section>
+            </section>
+            <section class="video">
+                <h1> Uma Amostra de Meus videos </h1>
+                <div class="video1">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HampNO-9Pfw" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="video2">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_wzgWkux9lo" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </section>
     </article>
     
 </body>
