--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             </section>
             <section class="video">
                 <h1> Uma Amostra de Meus videos </h1>
+                <p>O canal contempla com uma playlist com exercícios de graça</p>
                 <div class="video1">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/HampNO-9Pfw" title="YouTube video player"
                         frameborder="0"
