--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 <h1> Uma Amostra de Meus videos </h1>
                 <p>O canal contempla com uma playlist com exercícios de graça</p>
                 <div class="video1">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HampNO-9Pfw" title="YouTube video player"
+                    <iframe src="https://www.youtube.com/embed/HampNO-9Pfw" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div class="video2">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_wzgWkux9lo" title="YouTube video player"
+                    <iframe src="https://www.youtube.com/embed/_wzgWkux9lo" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
