--- a/index.html
+++ b/index.html
@@ -15,52 +15,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Finlandica:wght@700&family=Kanit&family=Oswald:wght@200&family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <img class="imgnav" src="logo_canal_trasparente.png">
-            <ul>
-            <li></li>
-            <li></li>
-            </ul>
-        </nav> 
-    </header>
-    <article>
-        <section>
-            <div>
-                <img class="img" src="logo_do_canal.jpg">
-                <h1>Lógica com Dev</h1>
-                <p>Olá, essas são todas nossas redes sociais</p>
-            </div>
-        </section>
-        <section class="botao">
-            <div>
-                <button class="btn1"><a href="https://www.youtube.com/channel/UCFceh7_DVDC0DYkPaKW7ClA" target="_blank"> Yotube
-                    </a></button>
-            </div>
-            <div>
-                <button class="btn2"><a href="https://www.tiktok.com/@ed.carlos.foto" target="_blank"> TikTok </a></button>
-            </div>
-            <div>
-                <button class="btn3"><a href="https://github.com/EdCarlosNunes" target="_blank"> GitHub </a></button>
-            </div>
+    <div class="conteudo">
+        <header>
+            <div class="menu-circle"></div>
+            </header>
+            <article>
+                <section>
+                    <div>
+                        <img class="img" src="logo_do_canal.jpg">
+                        <h1>Lógica com Dev</h1>
+                        <p>Olá, essas são todas nossas redes sociais</p>
+                    </div>
+                </section>
+                <section class="botao">
+                    <div>
+                    <button class="btn1"><a href="https://www.youtube.com/channel/UCFceh7_DVDC0DYkPaKW7ClA" target="_blank">
+                            Yotube
+                        </a></button>
+                    </div>
+                    <div>
+                        <button class="btn2"><a href="https://www.tiktok.com/@ed.carlos.foto" target="_blank"> TikTok </a></button>
+                    </div>
+                    <div>
+                        <button class="btn3"><a href="https://github.com/EdCarlosNunes" target="_blank"> GitHub </a></button>
+                    </div>
             </section>
             <section class="video">
                 <h1> Uma Amostra de Meus videos </h1>
                 <p>O canal contempla com uma playlist com exercícios de graça</p>
                 <div class="video1">
-                    <iframe src="https://www.youtube.com/embed/HampNO-9Pfw" title="YouTube video player"
-                        frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/HampNO-9Pfw" title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div class="video2">
-                    <iframe src="https://www.youtube.com/embed/_wzgWkux9lo" title="YouTube video player"
-                        frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/_wzgWkux9lo" title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
             </section>
-    </article>
-    
+        </article>
+    </div>
 </body>
 </html>
