--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus links</title>
+    <title>Fotografia Nunes Almeida</title>
     <link rel="icon" type="image/png" href="logo_canal_trasparente.png" />
     <link rel="stylesheet" href="estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,36 +24,23 @@
                 <section>
                     <div>
                         <img class="img" src="logo_do_canal.jpg">
-                        <h1>Lógica com Dev</h1>
-                        <p>Olá, essas são todas nossas redes sociais</p>
+                        <h1>Fotografia Nunes Alemida</h1>
+                        <p>Olá, essas são todas nossas redes sociais e portifolio</p>
                     </div>
                 </section>
                 <section class="botao">
                     <div>
-                    <button class="btn1"><a href="https://www.youtube.com/channel/UCFceh7_DVDC0DYkPaKW7ClA" target="_blank">
-                            Yotube
-                        </a></button>
+                    <button class="btn1"><a href="https://www.instagram.com/fotografia.nunes.almeida/?next=%2Fedcarlosoficial15%2F" target="_blank"> Instagram</a></button>
                     </div>
                     <div>
-                        <button class="btn2"><a href="https://www.tiktok.com/@ed.carlos.foto" target="_blank"> TikTok </a></button>
+                        <button class="btn2"><a href="https://api.whatsapp.com/message/XOGYFKKYIB7RD1?autoload=1&app_absent=0" target="_blank"> Whatsapp </a></button>
                     </div>
                     <div>
-                        <button class="btn3"><a href="https://github.com/EdCarlosNunes" target="_blank"> GitHub </a></button>
+                        <button class="btn3"><a href="https://fotografianunesalmeida.myportfolio.com" target="_blank"> Portifolio Casamento </a></button>
                     </div>
-            </section>
-            <section class="video">
-                <h1> Uma Amostra de Meus videos </h1>
-                <p>O canal contempla com uma playlist com exercícios de graça</p>
-                <div class="video1">
-                    <iframe src="https://www.youtube.com/embed/HampNO-9Pfw" title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-                <div class="video2">
-                    <iframe src="https://www.youtube.com/embed/_wzgWkux9lo" title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
+                    <div>
+                        <button class="btn3"><a href="https://fotografianunesalmeida.smugmug.com/" target="_blank"> Portifolio Retrato </a></button>
+                    </div>
             </section>
         </article>
     </div>
