--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <button class="btn1"><a href="https://www.instagram.com/fotografia.nunes.almeida/?next=%2Fedcarlosoficial15%2F" target="_blank"> Instagram</a></button>
                     </div>
                     <div>
-                        <button class="btn2"><a href="https://api.whatsapp.com/message/XOGYFKKYIB7RD1?autoload=1&app_absent=0" target="_blank"> Whatsapp </a></button>
+                        <button class="btn2"><a href="https://wa.me/message/XOGYFKKYIB7RD1" target="_blank"> Whatsapp </a></button>
                     </div>
                     <div>
                         <button class="btn3"><a href="https://fotografianunesalmeida.myportfolio.com" target="_blank"> Portifolio Casamento </a></button>
