--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                         <button class="btn2"><a href="https://wa.me/message/XOGYFKKYIB7RD1" target="_blank"> Whatsapp </a></button>
                     </div>
                     <div>
-                        <button class="btn3"><a href="https://fotografianunesalmeida.myportfolio.com" target="_blank"> Portifolio Casamento </a></button>
+                        <button class="btn3"><a href="https://fotografianunesalmeida.myportfolio.com" target="_blank"> Fotos Casamento </a></button>
                     </div>
                     <div>
-                        <button class="btn3"><a href="https://fotografianunesalmeida.smugmug.com/" target="_blank"> Portifolio Retrato </a></button>
+                        <button class="btn3"><a href="https://fotografianunesalmeida.smugmug.com/" target="_blank"> Retrato </a></button>
                     </div>
             </section>
         </article>
